--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
   --primary-color: #ab47bc;
   --secondary-color: #8e24aa;
   --tertiary-color: #ff9a05;
-  --accent-color: #ce93d8;
+  --accent-color: #f8bbd0;
   --dark: #333;
 }
 
