--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -35,7 +35,7 @@
 }
 
 .super-section {
-  padding: 10rem 0;
+  padding: 11rem 0;
 }
 
 @media (max-width: 1080px) {
